--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "5.*",
+		"vlucas/phpdotenv": "~1.1",
+		"filp/whoops": "~1.0",
+		"illuminate/html": "~5.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
