implemented oauth and authentication with github

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+GITHUB_ID=client id from github
+GITHUB_SECRET=client secret from github
+GITHUB_URL=http://mysocialiteapplication.app:8000/auth/github/callback
